manifests/10-headlamp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: headlamp

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`k8s.localhost`)
      kind: Rule
      services:
        - name: headlamp
          port: 80

#---
#apiVersion: v1
#kind: ServiceAccount
#metadata:
#  name: headlamp-admin
#  namespace: headlamp
#
#---
#apiVersion: rbac.authorization.k8s.io/v1
#kind: ClusterRoleBinding
#metadata:
#  name: headlamp-admin
#roleRef:
#  apiGroup: rbac.authorization.k8s.io
#  kind: ClusterRole
#  name: cluster-admin
#subjects:
#  - kind: ServiceAccount
#    name: headlamp-admin
#    namespace: headlamp
