manifests/51-nats-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: nats
  namespace: nats

spec:
  entryPoints:
    - nats

  routes:
    - match: HostSNI(`*`)
      services:
        - name: nats
          port: 4222
