manifests/52-nats-dashboard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-dashboard
  namespace: nats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats-dashboard
  template:
    metadata:
      labels:
        app: nats-dashboard
    spec:
      containers:
        - name: dashboard
          image: mdawar/nats-dashboard:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /srv/config.json
              subPath: config.json

      volumes:
        - name: config
          configMap:
            name: nats-dashboard-config
---
apiVersion: v1
kind: Service
metadata:
  name: nats-dashboard
  namespace: nats
spec:
  selector:
    app: nats-dashboard
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nats-dashboard
  namespace: nats
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nats.localhost`)
      kind: Rule
      services:
        - name: nats-dashboard
          port: 80
